Post List Fixed overflow styling

--- a/static/styles.css
+++ b/static/styles.css
@@ -35,6 +35,15 @@ body {
     cursor: pointer;
 }
 
+.ql-container--card .ql-editor:after {
+  content: ' ';
+  display: block;
+  height: 2%;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+}
+
 .ql-container--card:hover {
     opacity: 0.7;
     cursor: pointer;
@@ -50,23 +59,28 @@ body {
     min-height: 100%;
 }
 
-*[data-theme="1"] {
+*[data-theme="1"],
+*[data-theme="1"] .ql-editor:after {
     background-color: #efefef;
 }
 
-*[data-theme="2"] {
+*[data-theme="2"],
+*[data-theme="2"] .ql-editor:after {
     background-color: #000;
     color: #fff;
 }
 
-*[data-theme="3"] {
+*[data-theme="3"],
+*[data-theme="3"] .ql-editor:after {
     background-color: #ffe4f0;
 }
 
-*[data-theme="4"] {
+*[data-theme="4"],
+*[data-theme="4"] .ql-editor:after {
     background-color: #beffe2;
 }
 
-*[data-theme="5"] {
+*[data-theme="5"],
+*[data-theme="5"] .ql-editor:after {
     background-color: #fff2ac;
 }
